Реализована возможность установки и управлениями категориями сертификатов

--- a/CertificateControlMAA/Views/Home/AddOwner.cshtml
+++ b/CertificateControlMAA/Views/Home/AddOwner.cshtml
@@ -12,11 +12,11 @@
         <table>
             <tr>
                 <td><p>Имя</p></td>
-                <td><input type="text" name="name" /> </td>
+                <td><input type="text" name="name" required/> </td>
             </tr>
             <tr>
                 <td><p>Фамилия</p></td>
-                <td><input type="text" name="surname" /> </td>
+                <td><input type="text" name="surname" required/> </td>
             </tr>
             <tr>
                 <td><p>Отчество</p></td>
@@ -24,11 +24,11 @@
             </tr>
             <tr>
                 <td><p>Дата рождения</p></td>
-                <td><input type="text" name="birthDate" /> </td>
+                <td><input type="text" name="birthDate" required/> </td>
             </tr>
             <tr>
                 <td><p>Должность</p></td>
-                <td><input type="text" name="position" /> </td>
+                <td><input type="text" name="position" required/> </td>
             </tr>
             <tr><td><input type="submit" value="Добавить" /> </td><td></td></tr>
            
