--- a/CertificateControlMAA/Views/Home/Index.cshtml
+++ b/CertificateControlMAA/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     <div>
         <h3>Службы и департаменты АО "МАА"</h3>
         <p><a href="/Home/AddDepartment">Добавить службу (департамент)</a></p>
+        <p><a href="/Home/category_management">Управление категориями сертификатов</a></p>
         <table>
             <tr>
                 <td><p>ID</p></td>
