--- a/CertificateControlMAA/Views/Home/add_vendor.cshtml
+++ b/CertificateControlMAA/Views/Home/add_vendor.cshtml
@@ -12,7 +12,7 @@
         <table>
             <tr>
                 <td><p>Название организации</p></td>
-                <td><input type="text" name="name" /> </td>
+                <td><input type="text" name="name" required/> </td>
             </tr>
             <tr>
                 <td><p>Дата учреждения</p></td>
