--- a/CertificateControlMAA/Views/Home/edit_department.cshtml
+++ b/CertificateControlMAA/Views/Home/edit_department.cshtml
@@ -12,7 +12,7 @@
         <table>
             <tr>
                 <td><p>Название службы</p></td>
-                <td><input type="text" name="name" value="@ViewBag.department.name" /> </td>
+                <td><input type="text" name="name" value="@ViewBag.department.name" required/> </td>
             </tr>
             <tr><td><input type="submit" value="Изменить" /> </td><td></td></tr>
         </table>
