--- a/CertificateControlMAA/Views/Home/edit_vendor.cshtml
+++ b/CertificateControlMAA/Views/Home/edit_vendor.cshtml
@@ -14,7 +14,7 @@
         <table>
             <tr>
                 <td><p>Название организации</p></td>
-                <td><input type="text" name="name" value="@ViewBag.vendor.name" /> </td>
+                <td><input type="text" name="name" value="@ViewBag.vendor.name" required /> </td>
             </tr>
             <tr>
                 <td><p>Дата учреждения</p></td>
