--- a/CertificateControlMAA/Views/Home/add_certs.cshtml
+++ b/CertificateControlMAA/Views/Home/add_certs.cshtml
@@ -11,28 +11,35 @@
             <table>
                 <tr>
                     <td><p>Категория сертификата</p></td>
-                    <td><input type="text" name="category" /> </td>
+                    <td>
+                        <select name="category" required>
+                            @foreach (var b in ViewBag.cert_categories)
+                            {
+                                <option value="@b.id">@b.name</option>
+                            }
+                        </select>
+                    </td>
                 </tr>
                 <tr>
                     <td><p>Название сертификата</p></td>
-                    <td><input type="text" name="name" /> </td>
+                    <td><input type="text" name="name" required/> </td>
                 </tr>
                 <tr>
                     <td><p>start date</p></td>
-                    <td><input type="text" name="startDate" /> </td>
+                    <td><input type="text" name="startDate" required/> </td>
                 </tr>
                 <tr>
                     <td><p>end date</p></td>
-                    <td><input type="text" name="endDate" /> </td>
+                    <td><input type="text" name="endDate" required/> </td>
                 </tr>
                 <tr>
                     <td><p>get date</p></td>
-                    <td><input type="text" name="getDate" /> </td>
+                    <td><input type="text" name="getDate"  required/> </td>
                 </tr>
                 <tr>
                     <td><p>Организация выдачи</p></td>
                     <td>
-                        <select name="vendorID">
+                        <select name="vendorID" required>
                             @foreach (var b in ViewBag.vendors)
                             {
                                 <option value="@b.id">@b.name</option>
