попытка сделать авторизацию

--- a/CertificateControlMAA/Views/Home/Index.cshtml
+++ b/CertificateControlMAA/Views/Home/Index.cshtml
@@ -22,4 +22,7 @@
             }
             
         </table>
+        <p>
+            @Html.ActionLink("Регистрация нового пользователя", "Register", "Account", null, null)
+        </p>
     </div>
