--- a/WebApplication1/Views/Account/Login.cshtml
+++ b/WebApplication1/Views/Account/Login.cshtml
@@ -1,8 +1,7 @@
-﻿@using CertificateControlMAA.Models
+﻿@using WebApplication1.Models
 @model LoginViewModel
 @{
     ViewBag.Title = "Выполнить вход";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -12,7 +11,7 @@
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Используйте свою учетную запись для входа.</h4>
+                <h4>Используйте локальную учетную запись для входа.</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
@@ -42,6 +41,9 @@
                         <input type="submit" value="Выполнить вход" class="btn btn-default" />
                     </div>
                 </div>
+                <p>
+                    @Html.ActionLink("Регистрация нового пользователя", "Register")
+                </p>
                 @* Включите, когда будет включено подтверждение учетной записи для функции сброса пароля
                     <p>
                         @Html.ActionLink("Забыли пароль?", "ForgotPassword")
@@ -49,10 +51,13 @@
             }
         </section>
     </div>
-
     <div class="col-md-4">
         <section id="socialLoginForm">
             @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
         </section>
     </div>
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
