--- a/WebApplication1/Views/Account/Register.cshtml
+++ b/WebApplication1/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model CertificateControlMAA.Models.RegisterViewModel
+﻿@model WebApplication1.Models.RegisterViewModel
 @{
     ViewBag.Title = "Регистрация";
 }
@@ -30,17 +30,12 @@
         </div>
     </div>
     <div class="form-group">
-        <select name="departmentID" required>
-            @foreach (var a in ViewBag.departments)
-            {
-                <option value="@a.id">@a.name</option>
-            }
-        </select>
-    </div>
-    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Регистрация" />
         </div>
     </div>
 }
 
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
