--- a/WebApplication1/Views/Account/ResetPassword.cshtml
+++ b/WebApplication1/Views/Account/ResetPassword.cshtml
@@ -1,16 +1,17 @@
-﻿@model CertificateControlMAA.Models.RegisterViewModel
+﻿@model WebApplication1.Models.ResetPasswordViewModel
 @{
-    ViewBag.Title = "Регистрация";
+    ViewBag.Title = "Сброс пароля";
 }
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Создайте новую учетную запись.</h4>
+    <h4>Сброс пароля.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.Code)
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -30,17 +31,12 @@
         </div>
     </div>
     <div class="form-group">
-        <select name="departmentID" required>
-            @foreach (var a in ViewBag.departments)
-            {
-                <option value="@a.id">@a.name</option>
-            }
-        </select>
-    </div>
-    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Регистрация" />
+            <input type="submit" class="btn btn-default" value="Сброс" />
         </div>
     </div>
 }
 
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
