--- a/CertificateControlMAA/Views/Home/CertViewFull.cshtml
+++ b/CertificateControlMAA/Views/Home/CertViewFull.cshtml
@@ -19,4 +19,9 @@
 <p>@ViewBag.certificate.getDate</p>
 <p>Организация выдачи</p>
 <p>@ViewBag.vendor.name</p>
+<p>Images</p>
+<img src="@ViewBag.img1" alt="HTML5 Icon" style="width:128px;height:128px;"> <a href="/Home/delete_image?name=@ViewBag.img1&por=1&id=@ViewBag.certificate.id">Удалить</a> <br>
+<img src="@ViewBag.img2" alt="HTML5 Icon" style="width:128px;height:128px;"> <a href="/Home/delete_image?name=@ViewBag.img2&por=2&id=@ViewBag.certificate.id">Удалить</a> <br>
+<img src="@ViewBag.img3" alt="HTML5 Icon" style="width:128px;height:128px;"> <a href="/Home/delete_image?name=@ViewBag.img3&por=3&id=@ViewBag.certificate.id">Удалить</a> <br>
+<img src="@ViewBag.img4" alt="HTML5 Icon" style="width:128px;height:128px;"> <a href="/Home/delete_image?name=@ViewBag.img4&por=4&id=@ViewBag.certificate.id">Удалить</a> <br>
 
