--- a/CertificateControlMAA/Views/Home/edit_owner.cshtml
+++ b/CertificateControlMAA/Views/Home/edit_owner.cshtml
@@ -39,6 +39,31 @@
                     }
                     </select></td>
             </tr>
+            <tr>
+                <td><p>Пол</p></td>
+                <td>
+                    <select name="sex" required>
+
+                        <option value="true">Мужской</option>
+                        <option value="false">Женский</option>
+                    </select>
+                </td>
+            </tr>
+
+            <tr>
+                <td><p>E-mail</p></td>
+                <td><input type="text" name="email" /> </td>
+            </tr>
+            <tr>
+                <td><p>ИИН</p></td>
+                <td><input type="text" name="IIN" required /> </td>
+            </tr>
+            <tr>
+                <td><p>Телефон</p></td>
+                <td><input type="text" name="phone_number" /> </td>
+            </tr>
+
+
             <tr><td><input type="submit" value="Изменить" /> </td><td></td></tr>
 
         </table>
