--- a/CertificateControlMAA/Views/Home/view_certs.cshtml
+++ b/CertificateControlMAA/Views/Home/view_certs.cshtml
@@ -21,6 +21,10 @@
 <p>@ViewBag.owner.birthDate</p>
 <p>Должность</p>
 <p>@ViewBag.owner.position</p>
+<p>@ViewBag.sex</p>
+<p>@ViewBag.owner.email</p>
+<p>@ViewBag.owner.IIN</p>
+<p>@ViewBag.owner.phone_number</p>
 <div>
     <h3>Сертификаты</h3>
     <table>
