--- a/CertificateControlMAA/Views/Account/Register.cshtml
+++ b/CertificateControlMAA/Views/Account/Register.cshtml
@@ -30,13 +30,27 @@
         </div>
     </div>
     <div class="form-group">
-        <select name="departmentID" required>
+        <fieldset name="departmentID">
+            <legend>Select departments</legend>
             @foreach (var a in ViewBag.departments)
             {
-                <option value="@a.id">@a.name</option>
+                <input type="checkbox" name="departmentID" value="@a.id" /> @a.name <br>
             }
-        </select>
+        </fieldset>
     </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.surname, new { @class = "col-md-2 control-label"})
+        <div class="col-md-10">
+            @Html.TextBoxFor(t => t.surname, new { @class = "form-control"})
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.user_name, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(t => t.user_name, new { @class = "form-control" })
+        </div>
+    </div>
+
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Регистрация" />
