--- a/CertificateControlMAA/Views/Home/AddOwner.cshtml
+++ b/CertificateControlMAA/Views/Home/AddOwner.cshtml
@@ -30,6 +30,29 @@
                 <td><p>Должность</p></td>
                 <td><input type="text" name="position" required/> </td>
             </tr>
+            <tr>
+                <td><p>Пол</p></td>
+                <td>
+                    <select name="sex" required>
+
+                            <option value="true">Мужской</option>
+                            <option value="false">Женский</option>
+                    </select>
+                </td>
+            </tr>
+            
+            <tr>
+                <td><p>E-mail</p></td>
+                <td><input type="text" name="email"  /> </td>
+            </tr>
+            <tr>
+                <td><p>ИИН</p></td>
+                <td><input type="text" name="IIN" required /> </td>
+            </tr>
+            <tr>
+                <td><p>Телефон</p></td>
+                <td><input type="text" name="phone_number"  /> </td>
+            </tr>
             <tr><td><input type="submit" value="Добавить" /> </td><td></td></tr>
            
         </table>
