--- a/CertificateControlMAA/Views/Home/add_certs.cshtml
+++ b/CertificateControlMAA/Views/Home/add_certs.cshtml
@@ -6,6 +6,11 @@
 
     <div> 
         <h3>Добавление сертификата сотруднику @ViewBag.ownerName</h3>
+        @using (Html.BeginForm("add_certs", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            {
+
+
+        }
         <form method="post" action="">
             <input type="hidden" value="@ViewBag.ownerID" name="ownerID" />
             <table>
@@ -46,9 +51,19 @@
                             }
                         </select>
                     </td>
-                </tr>        
-                <tr><td><input type="submit" value="Отправить" /> </td><td></td></tr>
+                </tr>     
+            <tr>
+                <td>
+                    <input type="file" name="file" formenctype="multipart/form-data" /><br>
+                    <input type="file" name="file" formenctype="multipart/form-data" /><br>
+                    <input type="file" name="file" formenctype="multipart/form-data" /><br>
+                    <input type="file" name="file" formenctype="multipart/form-data" /><br>
+                </td>
+            </tr>
+                <tr><td><input type="submit" value="Отправить" formenctype="multipart/form-data" /> </td><td></td></tr>
             <</table>>    
-        </form>
+        </form> 
+
+
     </div>
 
