--- a/CertificateControlMAA/Views/Shared/_Layout.cshtml
+++ b/CertificateControlMAA/Views/Shared/_Layout.cshtml
@@ -5,7 +5,6 @@
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
-
 </head>
 <body>
     <nav>
@@ -13,6 +12,14 @@
             <li>@Html.ActionLink("Главная", "Index", "Home")</li>
         </ul>
     </nav>
+    <div id="logoff">
+        @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
+            {
+            @Html.AntiForgeryToken()
+            <input type="submit" value="Logoff">
+        }
+    </div>
+
     @RenderBody()
 </body>
 
